k8s/articles-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notelify-article
  labels: 
    app: notelify-article
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: notelify-article
  template:
    metadata:
      labels: 
        app: notelify-article
    spec:
      containers:
        - name : notelify-article
          image: antonyinjila/notelify-articles-service:latest
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: notelify-articles-service
spec:
  type: ClusterIP
  selector:
    app: notelify-article
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
