k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notelify-client
  labels: 
    app: notelify-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notelify-client
  template:
    metadata:
      labels:
        app: notelify-client
    spec:
      containers: 
        - name: notelify-client
          image : antonyinjila/notelify-client-service:latest
          ports:  
              - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
    name: notelify-client-service
spec:
    type: ClusterIP
    selector:
        app: notelify-client
    ports:
     -   port: 3000
         targetPort: 3000
