k8s/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notelify-user
  labels: 
    app: notelify-user
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: notelify-user
  template:
    metadata:
      labels: 
        app: notelify-user
    spec:
      containers:
        - name : notelify-user
          image: antonyinjila/notelify-users-service:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: notelify-users-service
spec:
  type: ClusterIP
  selector:
    app: notelify-user
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
