k8s/ingress.yaml

  
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /             # Path for the React.js client
            pathType: Prefix    # Use "Prefix" for path-based routing
            backend:
              service:
                name: notelify-client-service  # Name of the React.js client service
                port:
                  number: 3000               # Port of the React.js client service
          - path: /v1/articles         # Path for the GoLang backend API
            pathType: Prefix
            backend:
              service:
                name: notelify-articles-service    # Name of the GoLang backend API service
                port:
                  number: 8001            # Port of the backend API service

          - path: /v1/users         # Path for the GoLang backend API
            pathType: Prefix
            backend:
              service:
                name: notelify-users-service    # Name of the GoLang backend API service
                port:
                  number: 8000          # Port of the backend API service
